# kyrin-api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/routers/: __init__.py  chat.py  chats.py  crawl.py  rag.py  search.py  youtube.py
app/schemas/: __init__.py  chat.py
app/services/: __init__.py  chat.py  rag.py
routers/: anime.py  chat.py  chats.py  crawl.py  rag.py  rag_api.py  search.py
scripts/: start.sh
tests/: test_api.py
