[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kyrin-api"
version = "1.0.0"
description = "FastAPI backend for the Kyrin AI chat system — LLM proxy, function calling, web search, RAG pipeline, anime identification, and chat storage."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "Pillow>=11",
    "python-dotenv>=1.1",
    "pydantic-settings>=2.0",
    "chromadb>=1.5",
    "PyMuPDF>=1.25",
    "youtube-transcript-api>=1.2",
]

[project.scripts]
kyrin-api = "uvicorn app.main:app --host 0.0.0.0 --port 5271 --reload"
